--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.31.1
-opencv-python-headless==4.8.0.74
-keras==2.12.0
-tensorflow==2.12.0
-numpy==1.23.5
+streamlit
+opencv-python-headless
+keras
+tensorflow
+numpy
