--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-opencv
-opencv-python
-numpy
-keras
-opencv-python-headless
-streamlit
-Pillow
-tensorflow
+opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
+numpy==1.22.0
+Pillow==9.5.0
+tensorflow==2.12.0
+keras==2.12.0
+streamlit==1.31.1
