--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.31.1
-opencv-python-headless==4.7.0.72
-tensorflow==2.12.0
-numpy==1.22.0
-Pillow==9.5.0
+streamlit
+opencv-python-headless
+tensorflow
+numpy
+Pillow
